--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "main": "index.js",
   "scripts": {
+    "prebuild": "mkdir -p dist/",
+    "build": "babel src/ --out-file dist/$npm_package_name.js",
     "test": "exit 0;"
   },
   "keywords": [
@@ -13,5 +15,9 @@
     "reports"
   ],
   "author": "Sudaraka Wijesinghe <sudaraka@sudaraka.org> (https://sudaraka.org/)",
-  "license": "BSD-2-Clause"
+  "license": "BSD-2-Clause",
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0"
+  }
 }
