--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prebuild": "mkdir -p dist/",
     "build": "babel src/ --out-file dist/$npm_package_name.js",
-    "test": "exit 0;"
+    "test": ". ./.env && node dist/$npm_package_name.js"
   },
   "keywords": [
     "time-sheet",
@@ -16,6 +16,9 @@
   ],
   "author": "Sudaraka Wijesinghe <sudaraka@sudaraka.org> (https://sudaraka.org/)",
   "license": "BSD-2-Clause",
+  "dependencies": {
+    "mysql": "^2.11.1"
+  },
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-preset-es2015": "^6.9.0"
