--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Sudaraka Wijesinghe <sudaraka@sudaraka.org> (https://sudaraka.org/)",
   "license": "BSD-2-Clause",
   "dependencies": {
+    "express": "^4.13.4",
     "mysql": "^2.11.1"
   },
   "devDependencies": {
