--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "Reports and graphs generated based on my time-sheet data.",
   "private": true,
   "main": "index.js",
+  "bin": {
+    "keruwawa-server": "dist/server.js"
+  },
   "scripts": {
-    "prebuild": "mkdir -p dist/",
-    "build": "babel src/ --out-dir dist/ --compact true --minified",
+    "build": "webpack",
+    "postbuild": "sed -i '1i#!/usr/bin/env node' $npm_package_bin_keruwawa_server",
+    "clean": "rm -fr dist/",
+    "start": "node $npm_package_bin_keruwawa_server",
     "test": ". ./.env && node dist/"
   },
   "keywords": [
@@ -21,7 +26,9 @@
     "mysql": "^2.11.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0"
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "webpack": "^1.13.1"
   }
 }
