--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "author": "Sudaraka Wijesinghe <sudaraka@sudaraka.org> (https://sudaraka.org/)",
   "license": "BSD-2-Clause",
   "dependencies": {
+    "deep-assign": "^2.0.0",
     "express": "^4.13.4",
-    "mysql": "^2.11.1"
+    "mysql": "^2.11.1",
+    "yargs": "^4.7.1"
   },
   "devDependencies": {
     "babel-loader": "^6.2.4",
