Added ESLint support

--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "keruwawa-server": "dist/server.js"
   },
   "scripts": {
+    "prebuild": "npm test",
     "build": "webpack",
     "postbuild": "sed -i '1i#!/usr/bin/env node' $npm_package_bin_keruwawa_server",
     "clean": "rm -fr dist/",
     "start": "node $npm_package_bin_keruwawa_server",
-    "test": ". ./.env && node dist/"
+    "pretest": "eslint src/",
+    "test": "exit 0;"
   },
   "keywords": [
     "time-sheet",
@@ -28,9 +30,11 @@
     "yargs": "^4.7.1"
   },
   "devDependencies": {
+    "@sudaraka/eslint-config-default": "^0.5.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.5.0",
+    "eslint": "^2.12.0",
     "webpack": "^1.13.1"
   }
 }
