Default HTML template and home page

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.5.0",
     "eslint": "^2.12.0",
+    "html-webpack-plugin": "^2.21.0",
     "nodemon": "^1.9.2",
     "webpack": "^1.13.1"
   }
