--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "html-webpack-plugin": "^2.21.0",
     "node-livereload": "^0.6.0",
     "nodemon": "^1.9.2",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-merge": "^0.14.0"
   }
 }
