--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-preset-stage-2": "^6.5.0",
     "eslint": "^2.12.0",
     "html-webpack-plugin": "^2.21.0",
+    "moment": "^2.13.0",
     "node-livereload": "^0.6.0",
     "nodemon": "^1.9.2",
     "webpack": "^1.13.1",
