--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.5.0",
+    "chart.js": "^2.1.6",
     "eslint": "^2.13.1",
     "html-webpack-plugin": "^2.21.0",
     "moment": "^2.13.0",
