--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@sudaraka/eslint-config-default": "^0.5.2",
     "axios": "^0.12.0",
+    "babel-core": "^6.21.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.5.0",
